# DevOps-Course-Starter

./: .dockerignore  .env.j2  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  ansible-inventory.ini  ansible-playbook.yaml  deployment.yaml  docker-compose-debug.yml  docker-compose.yml  main.tf  outputs.tf  pyproject.toml  service.yaml  todoapp.service  todoapp.socket  variables.tf
.github/workflows/: ci-pipeline.yml
ansible/: .env.j2  todoapp.service
fixtures/vcr_cassettes/: synopsis.yaml
structurizr/: workspace.dsl  workspace.json
structurizr/.structurizr/index/: _0.cfe  _0.cfs  _0.si  segments_1
todo_app/: app.py  flask_config.py  item.py  view_model.py
todo_app/data/: mongodb_items.py  session_items.py  trello_items.py
todo_app/templates/: index.html  item.html  layout.html
todo_app/tests/: test_app.py  test_view_model.py
todo_app/tests_e2e/: test_selenium.py
